# EvoClaw

./: .env.example  .gitignore  .oxlintrc.json  CHANGELOG.md  CLAUDE.md  DeerFlow-vs-OpenClaw-Report.md  oxlint.json  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json  vitest.workspace.ts
.github/: dependabot.yml
.github/workflows/: release.yml  security.yml  test.yml
apps/desktop/: index.html  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: generate-icons.mjs
apps/desktop/src-tauri/src/: credential.rs  credential_migration.rs  crypto.rs  lib.rs  main.rs  permission.rs  sidecar.rs
apps/desktop/src-tauri/src/plugins/: crypto.rs  keychain.rs  mod.rs
brands/_base/: index.css.template  index.html.template  tauri.conf.json.template
brands/evoclaw/: brand.json
brands/healthclaw/: brand.json
docs/: Architecture.md  CLAUDE.md  HealthClaw_vs_OpenClaw.pptx  IterationPlan.md  MemorySystemDesign.md  PRD.md
docs/architecture/: AgentSystemDesign.md  Architecture_2026-03-20.md  KernelGapAnalysis.md  KernelRefactorPlan.md  MemorySystemDesign.md  SkillEvolutionDesign.md  SubAgent-ReAct-Optimization.md  cross-platform-credential.md  design-system.md  team-mode-channel-guide.md  (+1 more)
poc-bun/: README.md  RESULTS.md  bench.mjs  package.json  test-bun-sqlite.ts  test-hono.ts  test-pi-framework.ts  test-sqlite.ts
scripts/: brand-apply.mjs  build-dmg.sh  build-exe.mjs  changelog-generate.mjs  check-feature-flags.ts  dev.sh  download-bun.mjs  download-node.mjs  generate-brand-icons.mjs  start-core.sh  test-all.sh  tsconfig.json  validate-self-evolution.sh  version-bump.mjs  version-check.mjs  vitest.config.ts
(+160 files in other folders)
