[package]
name = "evoclaw-desktop"
version = "0.1.0"
description = "EvoClaw - Self-evolving AI Companion"
authors = ["EvoClaw Team"]
edition = "2021"

[lib]
name = "evoclaw_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
security-framework = "2"
ring = "0.17"
rand = "0.8"
base64 = "0.22"
tokio = { version = "1", features = ["process", "time", "rt"] }
