[package]
name = "healthclaw-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "healthclaw_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
security-framework = "3.2"
ring = "0.17"
base64 = "0.22"
