[package]
name = "evoclaw-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "evoclaw_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ring = "0.17"
base64 = "0.22"

# M14 PR-A1: security-framework 仅 macOS 编译时引入，且仅供 credential_migration 用
# （Keychain → JSON 一次性迁移）。Migration 完成 2 个版本后整体移除。
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.2"

[dev-dependencies]
tempfile = "3"
